force-app/main/default/objects/BWP_Price__c/BWP_Price__c.object-meta.xml
<CustomObject>
    <label>BWP Price</label>
    <nameField>
        <label>BWP Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BWP Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>