force-app/main/default/objects/BWP_Price__c/fields/Livemode__c.field-meta.xml
<CustomField>
    <fullName>Livemode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Live</label>
    <type>Checkbox</type>
</CustomField>