force-app/main/default/objects/BWP_Price__c/fields/Price_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Id__c</fullName>
    <externalId>true</externalId>
    <label>Price Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>