force-app/main/default/objects/BWP_Price__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>BWP_Product__c</referenceTo>
    <relationshipLabel>Prices (Breadwinner Billing)</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>