force-app/main/default/objects/BWP_Price__c/fields/Recurring_Interval__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Interval__c</fullName>
    <label>Recurring Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>