force-app/main/default/objects/BWP_Price__c/fields/Recurring_Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Interval_Count__c</fullName>
    <label>Recurring Interval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>